# prediction

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  GETTING_STARTED.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VISUAL_GUIDE.md  start.bat  start.sh
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  main.rs
backend/src/models/: match_model.rs  mod.rs  payment.rs  user.rs
backend/src/routes/: matches.rs  mod.rs  payments.rs
backend/src/services/: data_ingestion.rs  mod.rs  mpesa.rs  prediction_engine.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: MatchCard.tsx  PaymentModal.tsx
frontend/lib/: api.ts
